# FLAAA

./: README.md  docker-compose.yml
aggregation-strategies/: README.md  __init__.py  pyproject.toml  setup.py
aggregation-strategies/strategies/: __init__.py
examples/: .gitignore  README.md  pyproject.toml  registernode.sh
examples/medical/: __init__.py  client_app.py  generate_node_keys.sh  get_node_ids.py  server_app.py  task.py
examples/medical/access_control/: fedavg_grid_with_filter.py  fedmap_grid_with_filter.py  policy_enforcement_point.py  validator_pep.py
examples/medical/test_data/: metadata.txt  partition_0.csv  partition_1.csv  partition_2.csv
pdp/: .gitignore  README.md  app.js  package-lock.json  package.json
pdp/comformance/3/policies/: IIIA001Policy.xacml3.xml
pdp/comformance/3/responses/: IIIA003Response.xacml3.xml
pdp/comformance/fl-tests/: run_tests.js  test_case.py
pdp/comformance/fl-tests/xacml_test_cases/: E-TC01.xml  P1-TC01.xml  P1-TC02.xml  P1-TC03.xml  P1-TC04.xml  P1-TC05.xml  P2-TC01.xml  P2-TC02.xml  P2-TC03.xml  P2-TC04.xml  P2-TC05.xml  P2-TC06.xml  P3-TC01.xml  P3-TC02.xml  P3-TC03.xml  P3-TC04.xml  P3-TC05.xml  P3-TC06.xml  P3-TC07.xml  P3-TC08.xml  P3-TC09.xml  P4-TC01.xml  P4-TC02.xml  P4-TC03.xml  P4-TC04.xml  P4-TC05.xml  P4-TC06.xml  P4-TC07.xml  S-TC001.xml  S-TC002.xml  S-TC003.xml  S-TC004.xml  S-TC005.xml  S-TC006.xml  S-TC007.xml  S-TC008.xml  S-TC009.xml  S-TC010.xml  S-TC011.xml  S-TC012.xml  (+11 more)
pdp/policies/: medical.xml
pdp/scripts/: verify_logs.js
pdp/utils/: arrayUtil.js  decisionLogger.js  decisionParams.js  policyInformationPoint.js
pdp/xacml/: abstractPolicy.js  luas.js  pdp.js  policy.js  policySet.js  rule.js  targetMatch.js
pdp/xacml/attr/: anyURIAttribute.js  baseAttributeFactory.js  booleanAttribute.js  dateTimeAttribute.js  dayTimeDurationAttribute.js  doubleAttribute.js  integerAttribute.js  standardAttributeFactory.js  stringAttribute.js  timeAttribute.js  x500NameAttribute.js  yearMonthDurationAttribute.js
pdp/xacml/attr/xacml3/: attributeDesignator.js
pdp/xacml/attrProxy/: anyURIAttributeProxy.js
pdp/xacml/combiningAlgs/: denyOverridesPolicyAlg.js  denyOverridesRuleAlg.js  ruleCombiningAlgorithm.js
pdp/xacml/cond/: apply.js  comparisonFunction.js  condition.js  equalFunction.js  evaluationResult.js  expressionHandler.js  functionBase.js  mapFunctionProxy.js  notFunction.js  subtractFunction.js
pdp/xacml/ctx/: attribute.js  inputParser.js  requestCtx.js  requestCtxFactory.js  resultFactory.js
pdp/xacml/ctx/xacml3/: requestCtx.js
pdp/xacml/finderImpl/: filePolicyModule.js
pdp/xacml/xacml3/: allOfSelection.js  anyOfSelection.js  attributeAssignmentExpression.js  attributes.js  obligationExpression.js  target.js
superlink/: .gitignore  README.md  pyproject.toml  requirements.txt  run.bash  start_custom_superlink.py
superlink/custom_fleet/: config.py  custom_fleet_servicer.py  policy_enforcement_point.py
superlink/examples/: README.md  config.env.example  start_simple.sh  start_with_ssl.sh
