[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flwr-abac"
version = "1.0.0"
description = ""
license = "Apache-2.0"

dependencies = [
    "pandas",
    "scikit-learn",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "fz285"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "flwr_abac.server_app:app"
clientapp = "flwr_abac.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 2
fraction-train = 0.5
local-epochs = 1
lr = 0.01
min-fit-clients = 2 
min-evaluate-clients = 2 
min-available-clients = 2

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 2

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "127.0.0.1:9093"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup


[tool.flwr.federations.cancer-detection]  
address = "127.0.0.1:9093"
options.num-supernodes = 2 

[tool.flwr.federations.diabetes-prediction] 
address = "127.0.0.1:9093"
options.num-supernodes = 5


[tool.flwr.federations.drug-discovery]
address = "127.0.0.1:9093"
options.num-supernodes = 2

